<resources>
    <string name="app_name">Enrollment System</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="get_admitted">Get Admitted</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Blank Fragment</string>
    <string name="school">Holy Trinity College Seminary Foundation Inc.</string>
    <string name="welcome">Welcome!</string>
    <string name="username">Username</string>
    <string name="enterUsername">Enter your Username</string>
    <string name="password">Password</string>
    <string name="enterPassword">Enter you Password</string>
    <string name="login">Login</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="register">Register</string>
    <string name="transaction">Transactions</string>
    <string name="changePassword">Change Password</string>
    <string name="studentProfile">Student Profile</string>
    <string name="dueAmount">Due Amount</string>
    <string name="reports">Reports</string>
    <string name="enrolledSubjects">Enrolled Subjects</string>
    <string name="curriculumEvaluation">Curriculum Evaluation</string>
    <string name="soa">Statement of Accounts</string>
    <string name="schoolCalendar">School Calendar</string>
    <string name="logout">Logout</string>
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>
    <string name="type">What are you applying for?</string>
    <string name="college">College</string>
    <string name="shs">Senior High School</string>
    <string name="continueBtn">Continue</string>
    <string name="backBtn">Back</string>
    <string name="finishBtn">Finish</string>
    <string name="personal">Personal Information</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="mname">Middle Name</string>
    <string name="sex">Sex</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthdate</string>
    <string name="address">Address</string>
    <string name="province">Province</string>
    <string name="city">City</string>
    <string name="barangay">Barangay</string>
    <string name="mainAddress">Purok and Street</string>
    <string name="accountStudent">Account</string>
    <string name="retype_password">Retype Password</string>
    <string name="scholastic">Scholastic</string>
    <string name="lrn">Learner Reference Number (LRN)</string>
    <string name="shs_attended">SHS attended</string>
    <string name="jhs_attended">JHS attended</string>
    <string name="form137">Form 137/138</string>
    <string name="shs_diploma">SHS Diploma</string>
    <string name="if_undergrad">if undergrad</string>
    <string name="if_from_private">if from private</string>
    <string name="transcript_records">Transcript Records</string>
    <string name="dismissal_cert">Certificate of Honorable Dismissal</string>
    <string name="jhs_diploma">JHS Diploma</string>
    <string name="esc_cert">ESC Certificate</string>
    <string name="canonical">Canonical</string>
    <string name="baptismal">Baptismal Certificate</string>
    <string name="confirmation_cert">Confirmation Certificate</string>
    <string name="birth_cert">NSO/PSA Certificate</string>
    <string name="marriage">Marriage Certificate of Parents</string>
    <string name="brgy_residence">Brgy. Residence Certificate</string>
    <string name="indigency">Certificate of Indigency</string>
    <string name="bir">2305 BIR Form of Parent/Guardian</string>
    <string name="recommendation_letter">Recommendation Letter from the Parish Priest</string>
    <string name="medical_cert">Medical Certificate</string>
    <string name="civil">Civil</string>
    <string name="other_documents">Other Documents</string>
    <string name="parish">Parish</string>
    <string name="signup_complete">Registration Complete</string>
    <string name="please_wait">Please await an email confirming your admission.</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="municipality">Municipality</string>
    <string name="admission_applicants">Admission Applicants</string>
    <string name="admission_results">Admission Results</string>
    <string name="enrollment">Enrollment</string>
    <string name="admission">Admission</string>
    <string name="beneficiaries">Beneficiaries</string>
    <string name="child">Child</string>
    <string name="create_account">Create Account</string>
    <string name="student_account">Student Account</string>
    <string name="registrar_account">Registrar Account</string>
    <string name="benefactor_account">Benefactor Account</string>
    <string name="parent_account">Parent Account</string>
    <string name="manage_account">Manage Account</string>
    <string name="offerings">Offerings</string>
    <string name="curriculum">Curriculum</string>
    <string name="schedule">Schedule</string>
    <string name="prerequisites">Pre-requisites</string>
    <string name="corequisites">Co-requisites</string>
    <string name="grading_sheet">Grading Sheet</string>
    <string name="class_list">Class List</string>
    <string name="course">Course</string>
    <string name="certification">Certification</string>
    <string name="new_password">New Password</string>
    <string name="student_id">Student ID</string>
    <string name="name">Name</string>
    <string name="period">Period</string>
    <string name="period_name">Period Name</string>
    <string name="enrollment_status">Enrollment Status</string>
    <string name="total_balance">Total balance</string>
    <string name="address_and_contacts">Address and Contacts</string>
    <string name="purok_and_street">Purok and Street</string>
    <string name="enrollment_data">Enrollment Data</string>
    <string name="level">Level</string>
    <string name="entry_period">Entry Period</string>
    <string name="entry_date">Entry Date</string>
    <string name="lrn2">LRN</string>
    <string name="setup">Setup</string>
    <string name="options">Options</string>
    <string name="assessment">Assessment</string>
    <string name="fee_management">Fee management</string>
    <string name="student_ledger">Student Ledger</string>
    <string name="registrar">Registrar</string>
    <string name="create_student_account">Create Student Account</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="section">Section</string>
    <string name="code">Code</string>
    <string name="description">Description</string>
    <string name="time">Time</string>
    <string name="days">Days</string>
    <string name="room">Room</string>
    <string name="instructor">Instructor</string>
    <string name="units">Units</string>
    <string name="semester">Semester</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
    <string name="term_course_no"><![CDATA[Term & Course No.]]></string>
    <string name="manage_student_account">Manage Student Account</string>
    <string name="search_student">Search Student</string>
    <string name="student_accounts">Student Accounts</string>
    <string name="create">Create</string>
    <string name="role">Role</string>
    <string name="admin">Admin</string>
    <string name="account_id">Account ID</string>
    <string name="applicant_details">Applicant Details</string>
    <string name="applying_for">Applying for</string>
    <string name="accept">Accept</string>
    <string name="deny">Deny</string>
    <string name="remarks">Remarks</string>
    <string name="take1">Take 1</string>
    <string name="take2">Take 2</string>
    <string name="take3">Take 3</string>
    <string name="take4">Take 4</string>
    <string name="subject_code">Subject Code</string>
    <string name="Class">Class</string>
    <string name="date">Date</string>
    <string name="debit">Debit</string>
    <string name="credit">Credit</string>
    <string name="balance">Balance</string>
    <string name="support">Support</string>
    <string name="parent">Parent</string>
    <string name="benefactor">Benefactor</string>
</resources>