<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/transaction">
        <menu>
            <group
                android:id="@+id/menu_nav_transaction">
                <item
                    android:id="@+id/nav_admission_results"
                    android:icon="@drawable/baseline_circle_24"
                    android:title="@string/admission_results"/>
                <item
                    android:id="@+id/nav_admission_applicants"
                    android:icon="@drawable/baseline_circle_24"
                    android:title="@string/admission_applicants"/>
                <item
                    android:id="@+id/nav_create_student_account"
                    android:icon="@drawable/baseline_circle_24"
                    android:title="@string/create_student_account"/>
                <item
                    android:id="@+id/nav_manage_student_account"
                    android:icon="@drawable/baseline_circle_24"
                    android:title="@string/manage_student_account"/>
                <item
                    android:id="@+id/nav_enrollment"
                    android:icon="@drawable/icon_enroll_24"
                    android:title="@string/enrollment" />
                <item
                    android:id="@+id/nav_assessment"
                    android:icon="@drawable/icon_assessment_24"
                    android:title="@string/assessment" />
                <item
                    android:id="@+id/nav_fee_management"
                    android:icon="@drawable/icon_enroll_24"
                    android:title="@string/fee_management" />
                <item
                    android:id="@+id/nav_course"
                    android:icon="@drawable/baseline_circle_24"
                    android:title="@string/course"/>
                <item
                    android:id="@+id/nav_curriculum"
                    android:icon="@drawable/baseline_circle_24"
                    android:title="@string/curriculum"/>
                <item
                    android:id="@+id/nav_certification"
                    android:icon="@drawable/baseline_circle_24"
                    android:title="@string/certification"/>

            </group>
        </menu>
    </item>

    <item android:title="@string/reports">
        <menu>
            <group
                android:id="@+id/menu_google_apps">
                <item
                    android:id="@+id/nav_ledger"
                    android:icon="@drawable/icon_topic_24"
                    android:title="@string/student_ledger" />
                <item
                    android:id="@+id/nav_registrar"
                    android:icon="@drawable/icon_topic_24"
                    android:title="@string/registrar" />
            </group>
        </menu>
    </item>

    <item android:title="@string/options">
        <menu>
            <group
                android:id="@+id/menu_nav_settings">
                <item
                    android:id="@+id/nav_setup"
                    android:icon="@drawable/icon_setup_24"
                    android:title="@string/setup" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/icon_logout_24"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>

</menu>
