<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="Transaction">
        <menu>
            <group
                android:id="@+id/menu_nav_transaction">
                <item
                    android:id="@+id/nav_change_password"
                    android:icon="@drawable/baseline_circle_24"
                    android:title="@string/changePassword"/>
                <item
                    android:id="@+id/nav_student_profile"
                    android:icon="@drawable/baseline_circle_24"
                    android:title="@string/studentProfile" />
                <item
                    android:id="@+id/nav_due_amount"
                    android:icon="@drawable/baseline_circle_24"
                    android:title="Assessment" />
            </group>
        </menu>
    </item>

    <item android:title="Reports">
        <menu>
            <group
                android:id="@+id/menu_google_apps">
                <item
                    android:id="@+id/nav_enrolled_subjects"
                    android:icon="@drawable/icon_topic_24"
                    android:title="@string/enrolledSubjects" />
                <item
                    android:id="@+id/nav_curriculum_evaluation"
                    android:icon="@drawable/icon_topic_24"
                    android:title="@string/curriculumEvaluation" />
                <item
                    android:id="@+id/nav_statement_of_accounts"
                    android:icon="@drawable/icon_topic_24"
                    android:title="@string/soa" />
                <item
                    android:id="@+id/nav_school_calendar"
                    android:icon="@drawable/icon_calendar_24"
                    android:title="@string/schoolCalendar" />
            </group>
        </menu>
    </item>

    <item android:title="Options">
        <menu>
            <group
                android:id="@+id/menu_nav_settings">
                <item
                    android:id="@+id/nav_setup"
                    android:icon="@drawable/icon_setup_24"
                    android:title="Setup" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/icon_logout_24"
                    android:title="Logout" />
            </group>
        </menu>
    </item>

</menu>
