<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/transaction">
        <menu>
            <group
                android:id="@+id/menu_nav_transaction">
                <item
                    android:id="@+id/nav_create_account"
                    android:icon="@drawable/baseline_circle_24"
                    android:title="@string/create_account"/>
                <item
                    android:id="@+id/nav_manage_account"
                    android:icon="@drawable/baseline_circle_24"
                    android:title="@string/manage_account"/>
            </group>
        </menu>
    </item>


    <item android:title="Options">
        <menu>
            <group
                android:id="@+id/menu_nav_settings">
                <item
                    android:id="@+id/nav_setup"
                    android:icon="@drawable/icon_setup_24"
                    android:title="Setup" />
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/icon_logout_24"
                    android:title="Logout" />
            </group>
        </menu>
    </item>

</menu>
