<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/login_background"
        android:foregroundGravity="top"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/school"/>


    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/marginTertiary"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/imageExtraLarge"
            android:layout_marginHorizontal="@dimen/marginSecondary"
            android:layout_marginBottom="@dimen/marginTertiary"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@mipmap/logo"
            android:contentDescription="@string/school"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/textH3"
            android:text="@string/welcome"
            android:textAlignment="viewStart"
            android:layout_gravity="start"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:textAlignment="viewStart"
            android:layout_gravity="start"
            android:clickable="false"
            android:focusable="false"
            android:focusableInTouchMode="false" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSecondary"
            android:textColorHint="@android:color/tertiary_text_light"
            app:boxStrokeColor="@color/primary"
            app:boxCornerRadiusBottomEnd="@dimen/radiusTertiary"
            app:boxCornerRadiusTopEnd="@dimen/radiusTertiary"
            app:boxCornerRadiusBottomStart="@dimen/radiusTertiary"
            app:boxCornerRadiusTopStart="@dimen/radiusTertiary"
            app:boxStrokeWidth="@dimen/strokePrimary"
            app:hintTextColor="@color/primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColor="@android:color/secondary_text_light"
                android:textColorHint="@android:color/tertiary_text_light"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/textNormal" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginSecondary"
            android:textColorHint="@android:color/tertiary_text_light"
            app:boxCornerRadiusBottomEnd="@dimen/radiusTertiary"
            app:boxCornerRadiusTopEnd="@dimen/radiusTertiary"
            app:boxCornerRadiusBottomStart="@dimen/radiusTertiary"
            app:boxCornerRadiusTopStart="@dimen/radiusTertiary"
            app:boxStrokeColor="@color/primary"
            app:boxStrokeWidth="@dimen/strokePrimary"
            app:hintTextColor="@color/primary"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@android:color/tertiary_text_light">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:textColor="@android:color/secondary_text_light"
                android:textColorHint="@android:color/tertiary_text_light"
                android:textCursorDrawable="@null"
                android:textSize="@dimen/textNormal" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/marginTertiary"
            android:background="@drawable/login_button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@android:color/white"/>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/paddingPrimary"
            android:layout_marginBottom="@dimen/marginTertiary"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/paddingPrimary"
                android:text="@string/no_account_yet" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="@color/purple_700" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>